--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,24 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+    {% if user.is_authenticated %}
+        New Post
+        <form action="{% url 'create_post' %}" method="post"> 
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" type="text" name="content">
+            </div>
+            <div class="form-group">    
+                    {{ form.as_p }}         
+            </div>
+            <input class="btn btn-primary" type="submit" value="Post">
+        </form>
+    {% endif %}
+
+    {% for post in posts %}
+        <p>{{post.content}}</p>
+        <p>Posted by {{post.author}}</p>
+        <p>on {{post.created}}</p>
+        <p></p>
+    {%endfor%}
 {% endblock %}
