--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -7,9 +7,28 @@
     <p>Followers: {{followed}}</p>
     <p>User follows: {{follows}}</p> 
     <p>User posts:</p>
-    {% for post in posts %}
+    {% for post in page_obj %}
         <p>{{post.content}}</p>
         <p>posted on {{post.created}}</p>
         <p></p>
     {%endfor%}
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+
 {% endblock %}
