--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -2,7 +2,8 @@
 
 {% block body %}
     {% if user.is_authenticated %}
-        New Post
+    <div id="new_post">   
+    New Post
         <form action="{% url 'create_post' %}" method="post"> 
             {% csrf_token %}
             <div class="form-group">
@@ -13,6 +14,7 @@
             </div>
             <input class="btn btn-primary" type="submit" value="Post">
         </form>
+    </div> 
     {% endif %}
 
     {% for post in page_obj %}
