removed save btn, finished visuals, need to fix switching edit/save

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -10,7 +10,7 @@
     color: white;
     border-radius: 8px;
 }
-.save{
+.follow_btn{
     background-color: green;
     font-size: 12px;
     color: white;
