--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -33,7 +33,7 @@
                 <button class="like">Like</button> <a class='num_of_likes'></a>
                 <p></p>
                 {%if user == post.author%}
-                    <button class="edit">Edit</button>
+                    <button class="edit">EDIT</button>
                 {%endif%}
 
             </div>
@@ -58,5 +58,5 @@
             {% endif %}
         </span>
     </div>
-
+    
 {% endblock %}
